// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NormalizeNavigationTableHeaderButtonOptions should normalize complex navigation table header button options 1`] = `
{
  "backend": {
    "kind": "none",
  },
  "componentName": null,
  "confirm": false,
  "context": null,
  "controllerName": null,
  "directory": null,
  "errorMessage": null,
  "feature": null,
  "icon": "add",
  "kind": "navigation",
  "label": "Create",
  "name": "create",
  "nestModule": null,
  "openApi": null,
  "overwrite": false,
  "permission": null,
  "prefix": null,
  "project": "ui-lib",
  "refresh": false,
  "relativeTo": false,
  "replace": false,
  "route": "/users",
  "scope": null,
  "shared": false,
  "successMessage": null,
  "svgIcon": null,
  "tableName": "user-table",
  "tooltip": null,
}
`;

exports[`NormalizeNavigationTableHeaderButtonOptions should normalize minimal navigation table header button options 1`] = `
{
  "backend": {
    "kind": "none",
  },
  "componentName": null,
  "confirm": false,
  "context": null,
  "controllerName": null,
  "directory": null,
  "errorMessage": null,
  "feature": null,
  "icon": "add",
  "kind": "navigation",
  "label": null,
  "name": "back",
  "nestModule": null,
  "openApi": null,
  "overwrite": false,
  "permission": null,
  "prefix": null,
  "project": "ui-lib",
  "refresh": false,
  "relativeTo": false,
  "replace": false,
  "route": "/users",
  "scope": null,
  "shared": false,
  "successMessage": null,
  "svgIcon": null,
  "tableName": "user-table",
  "tooltip": null,
}
`;
